# glowpython2

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  meson.build  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
Examples/: IriComparison.py  Maxwellian.py  ModelComparison.py  MsisComparison.py  NoPrecipitation.py  Parallel.py
scripts/: f90_lowercase.py  test_unicode.py
src/ATMO/: atmo.f90  atmotest.f90  dfp.f90  iri90.f  snoem.f90
src/FIELDM/: fieldmtest.f90  magfield.f90
src/GLOW/: Makefile.glowbasic  Makefile.glowbasic.gfort  Makefile.glowdriver  README.md  TODO.md  alt_grid.f90  bands.f90  cglow.f90  cglow_release.f90  conduct.f90  conduct_iface.f90  egrid.f90  ephoto.f90  ephoto_init.f90  etrans.f90  exsect.f90  gchem.f90  gchem_modglow.f90  glow.f90  glowbasic.f90  glowdriver.f90  iri90.f  maxt.f90  mzgrid.f90  nrlmsise00.f  pyconduct.f90  qback.f90  rcolum.f90  snoem.f90  snoem_init.f90  snoemint.f90  ssflux.f90  ssflux_init.f90  vquart.f90
src/IGRF/: igrf.f  igrf14_shim.f90  igrftest.f90
src/glowpython/: __init__.py  base.py  examples.py  rcolum.py  sflux.py  utils.py
src/glowpython2/: __init__.py  atmo_iri90.py  atmo_msis00.py  base.py  coeffs.py  examples.py  igrf.py  plots.py  pogo68.py  sflux.py  utils.py  version.py
tests/: conftest.py  test_examples.py  test_ext.py  test_glow.py  test_glowbasic.py  test_iri.py  test_iri90.py  test_maxwellian.py  test_msis.py  test_msis00.py  test_no_precip.py
