# SPDX-FileCopyrightText: 2023 Sunip K. Mukherjee
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
    "meson-python",
    "numpy >= 1.14.5" # in order to get include dirs for meson without --no-build-isolation on pip install. isolation = false does not work.
]
build-backend = "mesonpy"

[project]
name = "glowpython2"
version = "0.0.1"
requires-python = ">=3.9"
authors = [
    {name = "Sunip K. Mukherjee", email = "sunipkmukherjee@gmail.com"},
]
description = "Python bindings for NCAR GLOW model"
keywords = [
  "thermosphere",
  "ionosphere"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Fortran",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = ['meson', 'ninja', 'numpy >= 1.14.5', 'xarray >= 0.15', 'geomagdata >= 1.6.1']

[project.urls]
homepage = "https://github.com/sunipkm/glowpython"

[project.scripts]
Glow2Maxwellian = "glowpython2.examples:Maxwellian"
Glow2NoPrecip = "glowpython2.examples:NoPrecipitation"